--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Page Simple</title>
+</head>
+<body>
+    <p>Ecole ENSITECH = version 1</p>
+</body>
+</html>
 
